--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,14 +12,19 @@
         android:theme="@style/Theme.Zapp"
         tools:targetApi="31">
         <activity
-            android:name=".CourseGuideActivity"
+            android:name=".TimerActivity"
             android:exported="false"
-            android:label="Course Guide"
+            android:label="Timer"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+
+        <!-- Your existing activities -->
+        <activity
+            android:name=".CourseGuideActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
